# github-roast

./: .gitignore  DEPLOY_DEFAULTS.md  LICENSE  README.md  analyze.py  analyzer.py  db.py  pyproject.toml  spec-github-activity-profiler.md  webapp.py
.github/workflows/: ci.yml  deploy-hetzner.yml
scripts/: deploy_remote.sh
