[project]
name = "github-roast"
version = "0.1.0"
description = "GitHub Portfolio Intelligence Webapp"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "agentrelay-cli>=0.5.5",
]

[project.scripts]
github-roast = "analyze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
